<!--
Copyright 2018 tarekmabdallah91@gmail.com

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Inventory App</string>

    <string name="update_product">Update Id # </string>
    <string name="details_product">Product # </string>
    <string name="add_product">Add new product</string>
    <string name="catalog_label">[ %d ] items result of</string>
    <string name="empty_text_msg">Sorry, There is no any data to show\nplease add some products to the Database</string>
    <string name="no_data_for_input_value_msg">Sorry, There is no any data\nrelated to this page
        \nplease try again\nor choose another option to retrieve data\nor add some data to this page</string>
    <string name="put_value_text_msg">Please, Enter a value then click show button\nto display the
        data\nor choose other choice to display the data</string>


    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="save_changes_dialog_msg">You have updated some fields.\nDo you still wish to save?</string>
    <string name="delete_all_items_dialog_msg">You are about deleting all items
        \nAre you sure you want to continue?</string>
    <string name="delete_one_item_dialog_msg">You are about deleting this item
        \nAre you sure you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="save_changes">Save changes</string>

    <string name="description_synced_item">description_synced_item</string>
    <string name="description_favoured_item">description_favoured_item</string>
    <string name="settings_label">Settings</string>

    <string name="out_of_stock">Out of stock</string>
    <string name="free_item">Free</string>

    <string name="title_fragment0">All Products</string>
    <string name="title_fragment1">Synced Products</string>
    <string name="title_fragment2">Not Synced Products</string>
    <string name="title_fragment3">favoured</string>


    <string name="action_insert_dummy_item">Insert dummy item</string>
    <string name="action_fill_fields_with_dummy_data">Fill fields with dummy data</string>
    <string name="action_delete_all_items">Delete all items</string>
    <string name="action_delete_last_row">Delete this item</string>
    <string name="action_reload_data">Reload data</string>

    <string name="action_save">Save</string>

    <string name="product_name">Product Name :</string>
    <string name="product_code">Product Code :</string>
    <string name="product_price">Product Price :</string>
    <string name="product_quantity">Product Quantity :</string>
    <string name="supplier_name">Supplier Name :</string>
    <string name="supplier_phone">Supplier Phone :</string>
    <string name="product_description">Description :</string>
    <string name="label_image">Product Images :</string>
    <string name="product_category">Product Category :</string>
    <string name="change_image">Click to change the image :</string>

    <string name="count_msg">[ %d ] items:</string>
    <string name="error_with_saving_product"> Important values are missed check entered values again please </string>
    <string name="product_saved_with_row"> Product saved successfully @id = </string>
    <string name="product_deleted_with_row"> Product deleted successfully </string>
    <string name="error_displaying_data"> Please check Logs, Cannot display this data due to invalid uri :</string>
    <string name="error_inserting_data"> Please check Logs, Cannot insert data the uri : </string>
    <string name="error_updating_data"> Please check Logs, Cannot update data the uri : </string>
    <string name="error_deleting_data"> Please check Logs, Cannot delete this items : </string>
    <string name="repeated_input_value"> this %s already entered before @id = %d</string>
    <string name="invalid_input_user_catalog_activity"> invalid value you should enter numbers up to %s digits</string>
    <string name="all_items_deleted">rows had been Deleted </string>

    <string name="error_text">%s must begin with a letter and length %d - %d\n
    No spaces or special characters allowed</string>
    <string name="error_numeric_value">The %s can not be null, but can be 0</string>
    <string name="error_supp_phone">Phone number length must be %d - %d</string>
    <string name="error_description">description cannot be more than 1000 letters</string>
    <string name="error_operation">Cannot do this operation</string>
    <string name="error_input_number">Please Enter a valid number </string>

    <string name="sort_or_search_key" translatable="false">sortOrSearch</string>
    <string name="order_key" translatable="false">order_key</string>
    <string name="search_key" translatable="false">search_key</string>
    <string name="sort_or_search_title">Sort / Search</string>
    <string name="order_title">Order By</string>
    <string name="search_tile">Search </string>

    <string name="key_order_by">Order by</string>
    <string name="key_search_for_name">Search for Name</string>
    <string name="key_search_for_category">Search for Category</string>
    <string name="key_search_for_code">Search for Code</string>

    <string name="value_sort_or_search_default_value" translatable="false">none</string>
    <string name="value_order_by" translatable="false">order by</string>
    <string name="value_search_for_name" translatable="false">search for Name</string>
    <string name="value_search_for_category" translatable="false">search for Category</string>
    <string name="value_search_for_code" translatable="false">search for Code</string>


    <string name="key_order_by_id">Id</string>
    <string name="key_order_by_name">Name</string>
    <string name="key_order_by_category">Category</string>
    <string name="key_order_by_price_lowest_first">Price ASC</string>
    <string name="key_order_by_price_highest_first">Price DESC</string>
    <string name="key_search_for_price_more_than">Price - more than</string>
    <string name="key_search_for_price_less_than">Price - less than</string>
    <string name="key_order_by_quantity_lowest_first">Quantity ASC</string>
    <string name="key_order_by_quantity_highest_first">Quantity DESC</string>
    <string name="key_search_for_quantity_more_than">Quantity - more than</string>
    <string name="key_search_for_quantity_less_than">Quantity - less than</string>


    <string name="value_order_by_id" translatable="false">_id</string>
    <string name="value_order_by_name" translatable="false">Name</string>
    <string name="value_order_by_category" translatable="false">Category</string>
    <string name="value_order_by_price_lowest_first" translatable="false">Price ASC</string>
    <string name="value_order_by_price_highest_first" translatable="false">Price DESC</string>
    <string name="value_search_for_price_more_than" translatable="false">Price - more than</string>
    <string name="value_search_for__price_less_than" translatable="false">Price - less than</string>
    <string name="value_order_by_quantity_lowest_first" translatable="false">Quantity ASC</string>
    <string name="value_order_by_quantity_highest_first" translatable="false">Quantity DESC</string>
    <string name="value_search_for__quantity_more_than" translatable="false">Quantity - more than</string>
    <string name="value_search_for__quantity_less_than" translatable="false">Quantity - less than</string>


    <string name="description_error_image_view_fragment_item">description_error_image_view_fragment_item</string>
    <string name="title_preference_category_un_synced_products">UnSynced Products</string>
    <string name="tag_Icons_off">off</string>
    <string name="tag_Icons_on">on</string>
    <string name="item_image_description">item_image_description</string>
    <string name="share_product">Share Product</string>
    <string name="shopping_car_icon_description">shopping_car_icon_description</string>
    <string name="shopping_car_counter">0</string>
    <string name="item_arrow_down_description">item_arrow_down_description</string>
    <string name="item_arrow_up_description">item_arrow_up_description</string>
    <string name="call_icon_description">call_icon_description</string>


</resources>
