<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2018 tarekmabdallah91@gmail.com

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/frg_tv_count_msg"
        style="@style/count_msg_text_view_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/count_msg" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/frg_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/padding_bottom_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_tv_count_msg" />

    <TextView
        android:id="@+id/frg_tv_error_msg"
        style="@style/error_msg_text_views_style"
        android:layout_marginTop="@dimen/padding_margin_value_8spaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frg_recycler_view"
        tools:text="@string/no_data_for_input_value_msg" />

    <ImageView
        android:id="@+id/frg_iv_error_image"
        android:layout_width="@dimen/empty_msg_icons_width"
        android:layout_height="@dimen/empty_msg_icons_height"
        android:contentDescription="@string/description_error_image_view_fragment_item"
        android:src="@drawable/icon_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_tv_error_msg" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frg_fab"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:paddingBottom="@dimen/padding_bottom_recycler_view"
        android:scaleType="center"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/icons_color"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>